# flake8-performance

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
flake8_performance/: __init__.py
